Add new group api endpoints
